# Computer_Vision

Exam/: CMakeLists.txt  skel.cpp
Harris_Corner_Detector/: CMakeLists.txt  main.cpp
Histogram/: CMakeLists.txt  main.cpp
Hough_Transform/: CMakeLists.txt  main.cpp
Integral_Image/: CMakeLists.txt  main.cpp
L01/: simple.cpp
L01-data-solved/: l01.cpp
L02-convolution/: convolution.cpp
L03-background-sub/: simple.cpp
L04-mathematic_morphology/: CMakeLists.txt  mm.cpp
L05-edges/: CMakeLists.txt  edge.cpp
L06-pinhole/: CMakeLists.txt  error.txt  main.cpp
L10-kmeans-solved/: kmeans.cpp
SIFT/: simple.cpp
